# blox

./: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  pyproject.toml  readme.md  setup.py  tailwind.config.js
backend/: export.py  requirements.txt
backend/backend/: settings.py
backend/core/: apps.py  crons.py  dynamic_api.py  middleware.py  permissions.py  signals.py  urls.py
backend/core/filters/: core.py
backend/core/migrations/: 0001_initial.py  0002_alter_changelog_id.py  0002_user_timezone_alter_user_last_activity_branch_and_more.py  0003_printformat.py
backend/core/models/: auth.py  (+4 more)
backend/frappe_app/: apps.py  signals.py  urls.py
blox/: cli.py
blox/apps/: __init__.py  dropapp.py  getapp.py  new.py
blox/commands/: blox.py  config.py
blox/main/: __init__.py  build.py  deploy.py  init.py  install.py  start.py
blox/sites/: __init__.py  drop.py  installapp.py  installdoc.py  installmodule.py  movedoc.py  new.py  uninstallapp.py  use.py
blox/templates/: hooks.py
blox/utils/: config.py  default_site.py  file_operations.py  initialize_django.py  register_models.py  run_process.py  subprocess.py  text.py
config/: apps.txt  doctypes.json  sites.json
src/contexts/: DataContext.js
src/custom/: customConfig.js  masafa.js
src/data/: fields.js
src/hooks/: useFormEvents.js  useFormLogic.js
src/pages/: 404.js  _app.js  _document.js  index.js  settings.js
src/styles/: globals.css  tailwind.css
src/utils/: Api.js  findDocDetails.js  generateSidebarData.js  handleSave.js  importFile.js  loadSiteConfigs.js  tenant.js
(+1617 files in other folders)
